--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,22 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    compileSdkVersion = 28
+    minSdkVersion = 15
+    targetSdkVersion = 28
+    supportLibVersion = '1.1.0'
+    constraintLayoutVersion = '1.1.3'
+    materialVersion = '1.1.0'
+    archComponentsVersion = '2.2.0'
+    roomVersion = '2.2.4'
+    pagingVersion = '2.1.1'
+    retrofitVersion = "2.6.0"
+    okhttpLoggingInterceptorVersion = "4.0.0"
+
+    runnerVersion = '1.3.0-alpha03'
+    rulesVersion = "1.0.1"
+    junitVersion = "4.12"
+    espressoVersion = '3.3.0-alpha03'
+}
